main/default/objects/Coverage_Matrix_Rule__c/Coverage_Matrix_Rule__c.object-meta.xml
<CustomObject>
    <label>Coverage Matrix Rule</label>
    <nameField>
        <displayFormat>CMR-{000000}</displayFormat>
        <label>Coverage Matrix Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Coverage Matrix Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>