main/default/objects/Coverage_Matrix_Rule__c/fields/Coverage_Matrix__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Matrix__c</fullName>
    <label>Coverage Matrix</label>
    <referenceTo>Coverage_Matrix__c</referenceTo>
    <relationshipLabel>Coverage Matrix Rules</relationshipLabel>
    <relationshipName>Coverage_Matrix_Rules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>