main/default/objects/Coverage_Matrix_Rule__c/fields/Operat__c.field-meta.xml
<CustomField>
    <fullName>Operat__c</fullName>
    <label>Operator Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>equals</fullName>
            </value>
            <value>
                <fullName>in</fullName>
            </value>
            <value>
                <fullName>not equals</fullName>
            </value>
            <value>
                <fullName>less than</fullName>
            </value>
            <value>
                <fullName>greater than</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>