main/default/objects/Coverage_Matrix_Rule__c/fields/Rule_Type__c.field-meta.xml
<CustomField>
    <fullName>Rule_Type__c</fullName>
    <label>Rule Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Field Query</fullName>
            </value>
            <value>
                <fullName>Object Query</fullName>
            </value>
            <value>
                <fullName>Key Value Query</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>