main/default/objects/Coverage_Matrix_Rule__c/recordTypes/Field_Query.recordType-meta.xml
<RecordType>
    <fullName>Field_Query</fullName>
    <active>true</active>
    <label>Field Query</label>
</RecordType>