main/default/objects/Coverage_Matrix_Rule__c/recordTypes/Key_Value_Query.recordType-meta.xml
<RecordType>
    <fullName>Key_Value_Query</fullName>
    <active>true</active>
    <label>Key Value Query</label>
</RecordType>