main/default/objects/Coverage_Matrix_Rule__c/recordTypes/Object_Query.recordType-meta.xml
<RecordType>
    <fullName>Object_Query</fullName>
    <active>true</active>
    <label>Object Query</label>
</RecordType>